--- a/index.html
+++ b/index.html
@@ -1064,9 +1064,9 @@
       <div fs-scrolldisable-element="" class="preloader">
         <div class="preloader_wrapper">
           <div class="preloader_text is-2">
-            <span class="preloader_otisbay">Otis Bay</span><br /><span
+            <span class="preloader_otisbay">Project Nexus</span><br /><span
               class="preloader_studio"
-              >studio</span
+              >By Team __</span
             >
           </div>
           <div class="preloader_logo w-embed">
