--- a/index.html
+++ b/index.html
@@ -1064,9 +1064,9 @@
       <div fs-scrolldisable-element="" class="preloader">
         <div class="preloader_wrapper">
           <div class="preloader_text is-2">
-            <span class="preloader_otisbay">Project Nexus</span><br /><span
+            <span class="preloader_otisbay">Made By</span><br /><span
               class="preloader_studio"
-              >By Team __</span
+              >Heisenbug</span
             >
           </div>
           <div class="preloader_logo w-embed">
@@ -1198,11 +1198,12 @@
                           </div>
                           <div class="home-header_text-wrapper">
                             <p>
-                              Nexus Project redefines learning with 
+                              Nexus Project redefines learning with
                               <span class="home-header_text-span1"
-                                >personalized roadmaps and interactive tools.</span
-                              >It’s designed to help you master new skills efficiently.<br /><br />Join
-                              Nexus, where
+                                >personalized roadmaps and interactive
+                                tools.</span
+                              >It’s designed to help you master new skills
+                              efficiently.<br /><br />Join Nexus, where
                               <span class="home-header_text-span2"
                                 >education meets technology</span
                               >
@@ -1451,7 +1452,7 @@
                     <div class="container-large">
                       <div class="clients_content">
                         <div class="clients_heading">
-                          <h2 class="heading-style-h4">Otis&#x27; friends</h2>
+                          <h2 class="heading-style-h4">Project Nexus Team</h2>
                         </div>
                         <div class="clients_logos">
                           <div class="clients_logo-item">
@@ -1522,21 +1523,23 @@
                         <div class="horizontal_landing-content">
                           <div class="horizontal_landing-text">
                             <h2 class="a11y_visually-hidden">
-                              About Otis Bay Studio
+                              About Project Nexus
                             </h2>
                             <p class="a11y_visually-hidden">
-                              State of the art experiences with launch times
-                              that leave you breathless and craving for more.
+                              Revolutionary learning journeys that leave you
+                              spellbound and deeply connected through impactful
+                              sentimental analysis.
                             </p>
                             <p aria-hidden="true" class="horizontal_paragraph">
                               <span class="horizontal_paragraph-span1"
-                                >State of the art experiences</span
+                                >Revolutionary learning journeys that leave you
+                                spellbound and deeply connected through</span
                               >
-                              with launch times that leave you breathless
+                              impactful
                             </p>
                             <div class="horizontal_landing-animated-text">
                               <div class="horizontal_paragraph is-animated">
-                                and craving for more.
+                                sentimental analysis.
                               </div>
                             </div>
                           </div>
@@ -1709,9 +1712,9 @@
                 </div>
                 <div class="horizontal_scroll-wrapper">
                   <p class="a11y_visually-hidden">
-                    We represent the next generation of digital creators.
-                    Empowering ambitious brands to reach their full potential by
-                    leveraging high-design with the power of low-code.
+                    Empowering brands with high design and low-code solutions,
+                    Project Nexus delivers innovation and efficiency, making
+                    sophisticated tech accessible.
                   </p>
                   <div class="horizontal_first-section">
                     <div
@@ -1720,7 +1723,7 @@
                       class="horizontal_represent-wrap"
                     >
                       <div class="horizontal_scrolling-paragraph is-first">
-                        We represent the next generation of digital creators
+                        Empowering brands with high design and low-code
                       </div>
                       <div class="horizontal-scrolling_shape3 w-embed">
                         <svg
@@ -1788,15 +1791,16 @@
                       id="w-node-f78b24f1-ec6b-a8df-49fa-cc7bd9870b9e-4502f132"
                     >
                       <div class="horizontal_scrolling-paragraph is-second">
-                        empowering
+                        solutions, Project Nexus
                         <span class="horizontal-scrolling_ambitious"
-                          >ambitious brands</span
+                          >delivers innovation</span
                         >
-                        to reach their full potential by
-                        <span class="horizontal-scrolling_leveraging"
-                          >leveraging high-design</span
+                        and
+                        <span class="horizontal-scrolling_leveraging">
+                          efficiency,</span
                         >
-                        with
+
+                        making
                       </div>
                     </div>
                     <div
@@ -1804,9 +1808,9 @@
                       id="w-node-e47d0fcb-b3ca-d2ac-e807-c342c179e38a-4502f132"
                     >
                       <div class="horizontal_scrolling-paragraph is-power">
-                        the
+                        sophisticated
                         <span class="horizontal-scrolling_power"
-                          >power of low-code.</span
+                          >tech accessible.</span
                         >
                       </div>
                     </div>
@@ -1838,7 +1842,7 @@
                           aria-expanded="false"
                           class="fs_accordion-1_header"
                         >
-                          <div class="heading-style-h2">Digital strategy</div>
+                          <div class="heading-style-h2">Revolutionary</div>
                           <div class="fs_accordion-1_arrow-wrapper">
                             <div class="fs_accordion-1_icon w-embed">
                               <svg
@@ -1867,10 +1871,10 @@
                         >
                           <div class="fs_accordion-1_body">
                             <p class="fs_accordion-1_paragraph">
-                              A successful website is built on a robust digital
-                              strategy. With our two decades of expertise and a
-                              team of top-tier strategists, we&#x27;ve got you
-                              covered.
+                              A revolutionary approach radically changes
+                              existing methods by introducing innovative
+                              features that redefine user learning and
+                              engagement experiences.
                             </p>
                           </div>
                         </div>
@@ -1932,7 +1936,9 @@
                           aria-expanded="false"
                           class="fs_accordion-1_header"
                         >
-                          <div class="heading-style-h2">Webflow CMS</div>
+                          <div class="heading-style-h2">
+                            Artificial Intelligence
+                          </div>
                           <div class="fs_accordion-1_arrow-wrapper">
                             <div class="fs_accordion-1_icon w-embed">
                               <svg
@@ -1961,9 +1967,9 @@
                         >
                           <div class="fs_accordion-1_body">
                             <p class="fs_accordion-1_paragraph">
-                              We are on the leading edge of low-code development
-                              using the Webflow CMS. Enabling us to work faster,
-                              more effectively, and with greater scalability.
+                              AI refers to the simulation of human intelligence
+                              in machines designed to think, learn, and solve
+                              problems autonomously.
                             </p>
                           </div>
                         </div>
@@ -1986,7 +1992,7 @@
                               ></path>
                             </svg>
                           </div>
-                          <div>Professional Partner</div>
+                          <div>Based On The</div>
                         </div>
                       </div>
                     </div>
@@ -2153,8 +2159,8 @@
                   <div class="horizontal_second-section">
                     <div class="horizontal_second-paragraph">
                       <div class="a11y_visually-hidden">
-                        Meet the next generation of digital creators, meet Otis
-                        Bay.
+                        Meet the next generation of sentimental analysis, meet
+                        Team Heisenbug.
                       </div>
                       <div class="horizontal_paragraph is-end">
                         Meet the
@@ -2163,11 +2169,11 @@
                         >
                         of
                         <span class="horizontal-scrolling_digital"
-                          >digital creators.</span
+                          >sentimental analysis.</span
                         >
                       </div>
                       <a href="/about" class="horizontal_button w-inline-block"
-                        ><div class="heading-style-h2">Meet Otis Bay</div>
+                        ><div class="heading-style-h2">By Team Heisenbug</div>
                         <div class="horizontal-button_icon w-embed">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -2268,8 +2274,8 @@
                         >
                         with
                       </div>
-                      <div class="display-inline is-image"></div>
-                      <div class="display-inline">Webflow</div>
+                      <!-- <div class="display-inline is-image"></div> -->
+                      <div class="display-inline">Artificial Intelligence</div>
                     </h2>
                   </div>
                   <div class="text-size-medium text-weight-semibold">
@@ -2279,7 +2285,7 @@
                     <a href="/for-bold-brands" class="button w-inline-block"
                       ><div class="button-inner is-even-padding">
                         <div class="button-text-wrapper">
-                          <div>Bold brands</div>
+                          <div>Roadmap</div>
                         </div>
                       </div>
                       <div class="button-outer"></div></a
@@ -2288,7 +2294,7 @@
                       class="button w-inline-block"
                       ><div class="button-inner is-even-padding">
                         <div class="button-text-wrapper">
-                          <div>Creative agencies</div>
+                          <div>Tasks</div>
                         </div>
                       </div>
                       <div class="button-outer"></div></a
@@ -2297,7 +2303,7 @@
                       class="button w-inline-block"
                       ><div class="button-inner is-even-padding">
                         <div class="button-text-wrapper">
-                          <div>Enterprise</div>
+                          <div>Quizzes</div>
                         </div>
                       </div>
                       <div class="button-outer"></div
@@ -2315,15 +2321,18 @@
                 <div class="container-large">
                   <div class="home-work_content">
                     <div class="home-work_heading">
-                      <div class="heading-wrapper"><h2>Otis made this</h2></div>
+                      <div class="heading-wrapper">
+                        <h2>Heisenbug made this</h2>
+                      </div>
                       <div class="home-work_paragraph">
                         <p class="text-style-intro">
-                          Ambitious brands who accelerate their progress, expand
-                          their horizons and are pioneering in the new
-                          generation of digital creations.
+                          Ambitions for Project Nexus include transforming
+                          learning with personalized roadmaps, automated tasks,
+                          insightful quizzes, and vibrant global community
+                          collaboration.
                         </p>
                       </div>
-                      <div class="home-work_shape-wrapper">
+                      <!-- <div class="home-work_shape-wrapper">
                         <div class="home-work_shape1 w-embed">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -2446,9 +2455,9 @@
                             </defs>
                           </svg>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
-                    <div class="home-work_collection">
+                    <!-- <div class="home-work_collection">
                       <div class="home-work_embed w-embed">
                         <style>
                           @media screen and (min-width: 992px) {
@@ -3135,14 +3144,14 @@
                           ></a>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
-        <div class="section_home-about">
+        <!-- <div class="section_home-about">
           <div class="home-about_pin-spacer">
             <div class="home-about_trigger">
               <h2 class="a11y_visually-hidden">ZUID Agency Group</h2>
@@ -3632,7 +3641,7 @@
                       >
                         <div class="fs_accordion-2_embed w-embed w-script">
                           <!-- [Finsweet Attributes] Accordion -->
-                          <script>
+                          <!-- <script>
                             (() => {
                               var t =
                                   "https://cdn.jsdelivr.net/npm/@finsweet/attributes-accordion@1/accordion.js",
@@ -3645,9 +3654,9 @@
                                 (e.src = t),
                                 document.head.append(e));
                             })();
-                          </script>
+                          </script> -->
 
-                          <style>
+                          <!-- <style>
                             .fs_accordion-2_item div svg {
                               overflow: visible;
                             }
@@ -3656,8 +3665,8 @@
                               fill: transparent;
                               stroke-width: 0.125rem;
                             }
-                          </style>
-                        </div>
+                          </style> -->
+                        <!-- </div>
                         <div
                           fs-accordion-element="accordion"
                           class="fs_accordion-2_item"
@@ -3770,8 +3779,8 @@
                         <div
                           fs-accordion-element="accordion"
                           class="fs_accordion-2_item"
-                        >
-                          <div
+                        > -->
+                          <!-- <div
                             id="usp-3-heading"
                             tabindex="0"
                             role="button"
@@ -3823,8 +3832,8 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </div>
+                      </div> -->
+                    <!-- </div>
                     <a
                       id="w-node-_3b4df8da-ab11-c10c-5ead-7df37ef968d2-4502f132"
                       href="/contact"
@@ -3915,8 +3924,8 @@
                 fill="none"
                 preserveAspectRatio="xMidYMid meet"
                 aria-hidden="true"
-                role="img"
-              >
+                role="img" -->
+              <!-- >
                 <path
                   d="M460.972 77.3712C357.056 -26.5448 186.382 -24.815 80.8285 80.7386C-24.725 186.292 -26.2388 357.183 77.4611 460.883C181.161 564.582 352.051 563.069 457.605 457.515C563.159 351.962 564.672 181.071 460.972 77.3712Z"
                   fill="url(#paint0_linear_409_1050)"
@@ -3937,8 +3946,8 @@
               </svg>
             </div>
           </div>
-        </section>
-        <section class="section_home-awards">
+        </section> -->
+        <!-- <section class="section_home-awards">
           <div class="home-awards_component">
             <div class="background-color-alternate">
               <div class="padding-global">
@@ -4370,8 +4379,8 @@
               </div>
             </div>
           </div>
-        </section>
-      </main>
+        </section> -->
+      <!-- </main>
       <footer class="footer">
         <div class="footer_component">
           <div class="padding-footer">
@@ -4689,7 +4698,7 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer> --> 
     </div>
     <script
       src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=65af9702e930a21edff0f0e0"
