--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
                   </svg></div
               ></a>
             </div>
-            <nav box-sizing="content-box" class="nav_menu">
+            <!-- <nav box-sizing="content-box" class="nav_menu">
               <div class="nav_link-wrapper">
                 <div class="nav_link-hover"></div>
               </div>
@@ -1057,7 +1057,7 @@
               <div class="nav_button-line"></div>
               <div class="nav_button-line"></div>
               <div class="nav_button-line"></div>
-            </button>
+            </button> -->
           </div>
         </div>
       </header>
