--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Last Published: Fri Aug 30 2024 09:06:31 GMT+0000 (Coordinated Universal Time) -->
 <html
   data-wf-domain="www.otisbay.studio"
   data-wf-page="65e9b53296c651744502f132"
@@ -117,7 +116,6 @@
   </head>
   <body>
     <div class="page-wrapper">
-
 
       <div class="global-styles w-embed">
         <style>
@@ -429,7 +427,6 @@
         </style>
       </div>
 
-
       <header class="nav_component">
         <div
           data-animation="default"
@@ -660,7 +657,6 @@
 
       <main class="main-wrapper">
 
-
         <div class="curved-header">
           <section class="section_home-header">
             <div class="background-color-primary">
@@ -673,7 +669,7 @@
                           <div class="home-header_heading-wrapper">
                             <h1>
                               <div class="a11y_visually-hidden">
-                                Project Nexus by Team ______
+                                Project Nexus by Team Heisenbug
                               </div>
                               <div class="home-header_heading">
                                 <span class="home-header_heading-span"
@@ -1011,7 +1007,6 @@
             </div>
           </section>
         </div>
-
 
         <section class="section_horizontal">
           <div class="background-color-primary">
@@ -1762,7 +1757,6 @@
           </div>
         </section>
 
-
         <div class="section_home-for">
           <div class="home-for_component">
             <div class="padding-global padding-section-large">
@@ -1816,7 +1810,6 @@
             </div>
           </div>
         </div>
-
 
         <section class="section_home-work">
           <div class="home-work_component">
@@ -2589,7 +2582,6 @@
           </div>
         </section>
 
-
         <div class="section_home-about">
           <div class="home-about_pin-spacer">
             <div class="home-about_trigger">
@@ -2651,7 +2643,7 @@
 <rect style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1; visibility: hidden;" vector-effect="non-scaling-stroke"  x="-540" y="-540" rx="0" ry="0" width="1080" height="1080" />
 </g>
 <g transform="matrix(7.4 0 0 7.4 540.2 540.2)"  >
-<g style=""   >
+<g    >
 		<g transform="matrix(1 0 0 1 0.02 0)"  >
 <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1;" vector-effect="non-scaling-stroke"  transform=" translate(-73.02, -73)" d="M 0.25 0.4375 L 0.25 145.562 L 107.65 145.562 L 136.375 115.975 C 142.375 110.125 145.75 102.1 145.788 93.7375 L 145.788 0.4375 L 0.25 0.4375 Z" stroke-linecap="round" />
 </g>
@@ -2702,7 +2694,7 @@
 </g>
 </g>
 </g>
-<g transform="matrix(1 0 0 1 520.05 428.2)" style="" id="1bcb281f-b13e-4eb3-877d-f199fd1f4981"  >
+<g transform="matrix(1 0 0 1 520.05 428.2)"  id="1bcb281f-b13e-4eb3-877d-f199fd1f4981"  >
 		<text xml:space="preserve" font-family="Raleway" font-size="132" font-style="normal" font-weight="900" text-decoration="overline underline line-through" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 0.84; white-space: pre;" ><tspan x="-456.98" y="-62.95" >T</tspan><tspan x="-356.14" y="-62.95" >E</tspan><tspan x="-258.85" y="-62.95" >A</tspan><tspan x="-152.33" y="-62.95" >M</tspan><tspan x="-456.98" y="145.88" >H</tspan><tspan x="-339.5" y="145.88" >E</tspan><tspan x="-242.22" y="145.88" >I</tspan><tspan x="-181.9" y="145.88" >S</tspan><tspan x="-81.97" y="145.88" >E</tspan><tspan x="15.31" y="145.88" >N</tspan><tspan x="133.32" y="145.88" >B</tspan><tspan x="242.88" y="145.88" >U</tspan><tspan x="359.44" y="145.88" >G</tspan></text>
 </g>
                                   </svg>
@@ -2879,7 +2871,6 @@
             </div>
           </div>
         </div>
-
 
         <section class="section_home-usps">
           <div class="home-usps_component">
@@ -3258,7 +3249,6 @@
           </div>
         </section>
 
-
         <section class="section_home-awards">
           <div class="home-awards_component">
             <div class="background-color-alternate">
@@ -3500,7 +3490,6 @@
             </div>
           </div>
         </section>
-
 
       </main>
 
@@ -3758,8 +3747,8 @@
         </div>
       </footer>
 
-
     </div>
+    
     <script
       src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=65af9702e930a21edff0f0e0"
       type="text/javascript"
